--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,28 @@
+.container {
+    padding: 30px 17%;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    font-family: Karla, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+h1, h2, h3, h4 {
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h4 {
+    font-family: 'Markazi Text', serif;
+}
+
 h1 {
     color:#F4CE14;
     font-size: 64pt;
@@ -10,8 +35,10 @@ h2 {
     font-weight: normal;
 }
 
-.container {
-    padding: 0px 17%;
+h4 {
+    color: #495E57;
+    font-size: 20pt;
+    font-weight: bold;
 }
 
 figure {
@@ -24,7 +51,8 @@ p, button {
 }
 
 p {
-    font-size: 14pt;
+    color: #495E57;
+    font-size: 16pt;
     font-weight: normal;
     line-height: 1.5;
     margin: 0;
@@ -37,8 +65,22 @@ button {
     border-radius: 16px;
     color: #000;
     cursor: pointer;
-    font-size: 14pt;
+    font-size: 18pt;
     font-weight: bold;
     height: 40px;
     width: 200px;
+}
+
+.flexRow {
+    display: flex;
+    flex-direction: row;
+}
+
+.flexColumn {
+    display: flex;
+    flex-direction: column;
+}
+
+.borderRadius {
+    border-radius: 16px;
 }
