--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -1,13 +1,13 @@
 
-nav {
+.navContainer {
     display: flex;
     margin: 10px 0;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
-.navContainer, .navLinks {
+.navSection, .navLinks {
     align-items: center;
-    display: flex;
-    flex-direction: row;
     gap: 90px;
 }
 
@@ -24,17 +24,10 @@ nav {
     width: 100%;
 }
 
-.navContainer {
-    
-}
-
 .navLinks {
-    list-style: none;
     padding: 0;
 }
 
 .navLinks li a {
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
+    color: #000;
 }
