--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,3 +1,7 @@
+.footerContainer, .footerWrapper, .sectionList {
+    flex-direction: column;
+}
+
 .sectionList li, .sectionList li a {
     color: #495E57;
     font-size: 16pt;
@@ -6,7 +10,6 @@
 .footerContainer {
     align-items: center;
     background-color: #EDEFEE;
-    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -15,7 +18,6 @@
 }
 
 .footerWrapper {
-    flex-direction: column;
     gap: 85px;
 }
 
@@ -24,12 +26,11 @@
 }
 
 .sectionHeading {
+    color: #495E57;
     margin-bottom: 30px;
 }
 
 .sectionList {
-    display: flex;
-    flex-direction: column;
     gap: 15px;
 }
 
@@ -39,10 +40,13 @@
 }
 
 @media (min-width: 1095px) {
+    .footerContainer, .footerWrapper {
+        flex-direction: row;
+    }
+
     .footerContainer {
         align-items: flex-start;
-        flex-direction: row;
-        gap: 60px;
+        gap: 80px;
         justify-content: unset;
     }
 
@@ -51,7 +55,6 @@
     }
 
     .footerWrapper {
-        flex-direction: row;
         gap: 85px;
     }
 
