--- a/src/components/Highlights/highlights.module.css
+++ b/src/components/Highlights/highlights.module.css
@@ -6,8 +6,9 @@
     flex-direction: column;
 }
 
-.highlightsCardHeader h2, .highlightsCardHeader span {
-    font-size: clamp(16pt, 1.5vw, 20pt);
+.highlightsCardHeader h3, .highlightsCardHeader span {
+    font-size: clamp(14pt, 1.5vw, 16pt);
+    font-weight: bolder;
 }
 
 .highlightsContent, .highlightsSectionCards, .highlightsCardHeader {
@@ -53,15 +54,12 @@
     flex-direction: column;
 }
 
-.highlightsCardHeader h2 {
+.highlightsCardHeader h3 {
     color: #000;
-    font-weight: normal;
 }
 
 .highlightsCardHeader span {
     color: #EE9972;
-    font-family: Markazi Text, serif;
-    font-weight: normal;
     margin: 0;
 }
 
