--- a/src/components/Home/Highlights/highlights.module.css
+++ b/src/components/Home/Highlights/highlights.module.css
@@ -24,7 +24,8 @@
     margin-bottom: 20px;
 }
 
-.highlightsContent h1 {
+.highlightsContent h2 {
+    font-size: clamp(34pt, 5vw, 64pt);
     text-align: center;
 }
 
@@ -41,7 +42,7 @@
     gap: 0;
 }
 
-.highlightsSection h1 {
+.highlightsSection h2 {
     color: #495E57;
 }
 
@@ -64,19 +65,33 @@
 }
 
 .highlightsCard {
+    border: 1px solid #495E57;
+    box-shadow: none;
     height: 500px;
     margin-bottom: 20px;
     overflow: hidden;
+    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
     width: 100%;
+}
+
+.highlightsCard:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transform: scale(1.01);
 }
 
 .highlightsCardImage {
     height: 214px;
+    overflow: hidden;
 }
 
 .highlightsCardImage img {
     height: 100%;
     object-fit: cover;
+    transition: transform 0.3s ease-in-out;
+}
+
+.highlightsCard:hover .highlightsCardImage img {
+    transform: scale(1.3);
 }
 
 .highlightsCardContent {
@@ -113,7 +128,7 @@
         flex-direction: row;
     }
 
-    .highlightsContent h1 {
+    .highlightsContent h2 {
     text-align: left;
 }
 
