--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-h1, h2, h3, h4 {
+h1, h2, h3, h4, ul, figure, p {
     margin: 0;
     padding: 0;
 }
@@ -7,8 +7,41 @@ h1, h2, h4 {
     font-family: 'Markazi Text', serif;
 }
 
+h2, li > a:focus-visible {
+    color: #FFF;
+}
+
 h3, p, button {
     font-family: Karla, sans-serif;
+}
+
+h3, li.currentLink a, a:link, button {
+    color: #333;
+}
+
+h4, p {
+  color: #495E57;
+}
+
+a:visited, a:active {
+  color: #FBDABB;
+}
+
+li.currentLink a:after, li:after {
+  content: '';
+  display: block;
+  height: 3px;
+  transition: width .5s ease, background-color .5s ease;
+  width: 0px;
+}
+
+li.currentLink:after, li:hover:after {
+  background: #495E57;
+  width: 80%;
+}
+
+button:visited, button:active {
+  background-color: #FBDABB;
 }
 
 .container {
@@ -17,8 +50,6 @@ h3, p, button {
 
 ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 a {
@@ -31,32 +62,13 @@ a {
 }
 
 a:link {
-  color: #333;
-}
-
-a:visited {
-  color: #FBDABB;
-}
-
-a:active {
-  color: #FBDABB;
+  transition: color 0.3s ease-in-out;
 }
 
 li:has(a:focus-visible):after {
   background: #495E57;
   width: 80%;
 }
-
-/* .linkHoverEffect {
-  align-items: center;
-  color: #ede7f1;
-  display: flex;
-  flex-direction: row;
-  font-size: 1.5rem;
-  gap: 60px;
-  justify-content: center;
-  width: 100%;
-} */
 
 li {
   cursor: pointer;
@@ -74,46 +86,21 @@ li:hover:not(.has-form) > a {
   transition: color .3s ease 0s;
 }
 
-li.currentLink a {
-    color: #333;
-}
-
 li > a:focus-visible {
     background-color: #495E57;
     border-radius: 3px;
-    color: #FFF;
     outline: thin solid #FFF;
     padding: 0 3px !important;
 }
 
 li.currentLink a:after {
   background: #333;
-  content: '';
-  display: block;
-  height: 3px;
   margin: auto;
-  transition: width .5s ease, background-color .5s ease;
-  width: 0px;
 }
 
 li:after {
   background: transparent;
-  content: '';
-  display: block;
-  height: 3px;
   margin: 5px auto auto;
-  transition: width .5s ease, background-color .5s ease;
-  width: 0px;
-}
-
-li.currentLink:after {
-  background: #495E57;
-  width: 80%;
-}
-
-li:hover:after {
-  background: #495E57;
-  width: 80%;
 }
 
 h1 {
@@ -123,42 +110,30 @@ h1 {
 }
 
 h2 {
-    color: #FFF;
     font-size: clamp(24pt, 5vw, 40pt);
     font-weight: normal;
 }
 
 h3 {
-    color: #000;
     font-size: clamp(14pt, 3vw, 18pt);
     font-weight: bold;
 }
 
 h4 {
-    color: #495E57;
     font-size: 20pt;
     font-weight: bold;
 }
 
-figure {
-    padding: 0;
-    margin: 0;
-}
-
 p {
-    color: #495E57;
     font-size: clamp(12pt, 1.5vw, 16pt);
     font-weight: normal;
     line-height: 1.5;
-    margin: 0;
-    padding: 0;
 }
 
 button {
     background-color: #F4CE14;
     border: none;
     border-radius: 16px;
-    color: #000;
     cursor: pointer;
     font-size: clamp(14pt, 1.5vw, 18pt);
     font-weight: bold;
@@ -169,14 +144,6 @@ button {
 
 button:hover {
     background-color: #EE9972;
-}
-
-button:visited {
-  background-color: #FBDABB;
-}
-
-button:active {
-  background-color: #FBDABB;
 }
 
 .flexRow {
