--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@ h2, li > a:focus-visible {
     color: #FFF;
 }
 
-h3, p, button {
+h3, p, fieldset section, label, input, select, button {
     font-family: Karla, sans-serif;
 }
 
@@ -19,7 +19,7 @@ h3, li.currentLink a, a:link, button {
     color: #333;
 }
 
-h4, p {
+h4, p, fieldset section, input, select {
   color: #495E57;
 }
 
@@ -40,25 +40,31 @@ li.currentLink:after, li:hover:after {
   width: 80%;
 }
 
+p, fieldset section {
+  line-height: 1.5;
+  font-size: clamp(12pt, 1.5vw, 16pt);
+  font-weight: normal;
+}
+
 button:visited, button:active {
   background-color: #FBDABB;
 }
 
 .container {
-    padding: 30px 17%;
+  padding: 30px 17%;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    display: inline-block;
-    font-family: Karla, sans-serif;
-    font-weight: bold;
-    height: inherit;
-    position: relative;
-    text-decoration: none;
+  display: inline-block;
+  font-family: Karla, sans-serif;
+  font-weight: bold;
+  height: inherit;
+  position: relative;
+  text-decoration: none;
 }
 
 a:link {
@@ -87,10 +93,10 @@ li:hover:not(.has-form) > a {
 }
 
 li > a:focus-visible {
-    background-color: #495E57;
-    border-radius: 3px;
-    outline: thin solid #FFF;
-    padding: 0 3px !important;
+  background-color: #495E57;
+  border-radius: 3px;
+  outline: thin solid #FFF;
+  padding: 0 3px !important;
 }
 
 li.currentLink a:after {
@@ -104,58 +110,52 @@ li:after {
 }
 
 h1 {
-    color:#F4CE14;
-    font-size: clamp(34pt, 5vw, 64pt);
-    font-weight: 500;
+  color:#F4CE14;
+  font-size: clamp(34pt, 5vw, 64pt);
+  font-weight: 500;
 }
 
 h2 {
-    font-size: clamp(24pt, 5vw, 40pt);
-    font-weight: normal;
+  font-size: clamp(24pt, 5vw, 40pt);
+  font-weight: normal;
 }
 
 h3 {
-    font-size: clamp(14pt, 3vw, 18pt);
-    font-weight: bold;
+  font-size: clamp(14pt, 3vw, 18pt);
+  font-weight: bold;
 }
 
 h4 {
-    font-size: 20pt;
-    font-weight: bold;
-}
-
-p {
-    font-size: clamp(12pt, 1.5vw, 16pt);
-    font-weight: normal;
-    line-height: 1.5;
+  font-size: 20pt;
+  font-weight: bold;
 }
 
 button {
-    background-color: #F4CE14;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    font-size: clamp(14pt, 1.5vw, 18pt);
-    font-weight: bold;
-    height: 40px;
-    width: 200px;
-    transition: background-color 0.3s ease-in-out;
+  background-color: #F4CE14;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: clamp(14pt, 1.5vw, 18pt);
+  font-weight: bold;
+  height: 40px;
+  width: 200px;
+  transition: background-color 0.3s ease-in-out;
 }
 
 button:hover {
-    background-color: #EE9972;
+  background-color: #EE9972;
 }
 
 .flexRow {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .flexColumn {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .borderRadius {
-    border-radius: 16px;
+  border-radius: 16px;
 }
