--- a/src/components/Reservations/reservations.module.css
+++ b/src/components/Reservations/reservations.module.css
@@ -1,56 +1,7 @@
-.testimonialsCards, .testimonialProfile {
-    margin: 0 auto;
-}
-
-.testimonialsCards, .profileWrapper, .testimonialProfile {
-    gap: 16px;
-}
-
-.testimonialsSection {
-    align-items: center;
+.reservationContainer {
     background-color: #495E57;
 }
 
-.testimonialsSection > h2 {
-    margin-bottom: 20px;
+.reservationContainer h1 {
     text-align: center;
-}
-
-.testimonialsCards {
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
-}
-
-.profileWrapper {
-    align-items: center;
-}
-
-.testimonialProfile {
-    background-color: #FBDABB;
-    justify-content: space-between;
-    padding: 10px;
-    width: 100%;
-}
-
-.profile {
-    height: 80px;
-    width: 80px;
-}
-
-.profile img {
-    border: solid 2px #495E57;
-    width: 100%;
-}
-
-@media (min-width: 1475px) {
-    .testimonialsCards {
-        flex-direction: row;
-        justify-content: unset;
-        width:unset;
-    }
-
-    .testimonialProfile {
-        width: auto;
-    }
 }
