--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -14,7 +14,6 @@
 
 .navLinks {
     background-color: #F4CE14;
-    border-radius: 16px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: none;
     flex-direction: column;
@@ -68,6 +67,20 @@
     transform: translateY(-50%);
     width: fit-content;
     z-index: 10;
+}
+
+.hamburger:hover {
+    background: none;
+}
+
+@media (max-width: 1024px) {
+    .navLinks li a:visited {
+        color: #495e57;
+    }
+
+    .navLinks li:hover a:visited {
+        color: #FFF;
+    }
 }
 
 @media (min-width: 1025px) {
